--- a/views/404.ejs
+++ b/views/404.ejs
@@ -1,7 +1,7 @@
 <%- include("templates/header") %>
     <div class="d-flex align-items-center justify-content-center vh-100">
         <div class="text-center">
-            <h1>404 Error</h1>
+            <h1 class="text-danger">404 Error</h1>
             <p>This page does not exist.</p>
         </div>
     </div>
