--- a/views/templates/user.ejs
+++ b/views/templates/user.ejs
@@ -1,2 +1,3 @@
 <li> <%= user.username %> ( <%= user.type %> ) <a class="btn btn-success" href="/toAdmin/<%= user.username %>/<%= user.type %>">Promote to Admin</a> 
-                                               <a class="btn btn-danger"  href="/toUser/<%= user.username %>/<%= user.type %>">Demote to User</a> </li>
+                                               <a class="btn btn-danger"  href="/toUser/<%= user.username %>/<%= user.type %>">Demote to User</a>
+</li>
